fix caegoryid param
