# apispecs-v1.json
@@ -18,8 +18,8 @@
                 }
             }
         },
-        "securitySchemes" : {
-            "Auth" : {
+        "securitySchemes": {
+            "Auth": {
                 "type": "apiKey",
                 "in": "header",
                 "name": "X-API-Key",
@@ -35,9 +35,11 @@
     "paths": {
         "/categories": {
             "get": {
-                "security": [{
-                    "Auth":[]
-                }],
+                "security": [
+                    {
+                        "Auth": []
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "success all categories",
@@ -66,9 +68,11 @@
                 }
             },
             "post": {
-                "security": [{
-                    "Auth":[]
-                }],
+                "security": [
+                    {
+                        "Auth": []
+                    }
+                ],
                 "description": "create new category",
                 "requestBody": {
                     "content": {
@@ -109,9 +113,11 @@
                 }
             },
             "put": {
-                "security": [{
-                    "Auth":[]
-                }],
+                "security": [
+                    {
+                        "Auth": []
+                    }
+                ],
                 "description": "update category",
                 "requestBody": {
                     "content": {
@@ -124,7 +130,7 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Success create new category",
+                        "description": "Success update category",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -147,9 +153,11 @@
                 }
             },
             "delete": {
-                "security": [{
-                    "Auth":[]
-                }],
+                "security": [
+                    {
+                        "Auth": []
+                    }
+                ],
                 "description": "delete category",
                 "requestBody": {
                     "content": {
@@ -189,9 +197,11 @@
         },
         "/categories/{categoryId}": {
             "get": {
-                "security": [{
-                    "Auth":[]
-                }],
+                "security": [
+                    {
+                        "Auth": []
+                    }
+                ],
                 "description": "Get category by id",
                 "parameters": [
                     {
@@ -224,6 +234,217 @@
                         }
                     }
                 }
+            }
+        },
+        "/categories/{categoryId}/products": {
+            "get": {
+                "security": [
+                    {
+                        "Auth": []
+                    }
+                ],
+                "description": "Get all product by category id",
+                "parameters": [
+                    {
+                        "required": true,
+                        "name": "categoryId",
+                        "in": "path",
+                        "description": "category id"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success get all products by category id",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "code": {
+                                            "type": "number"
+                                        },
+                                        "status": {
+                                            "type": "string"
+                                        },
+                                        "data": {
+                                            "type": "array",
+                                            "items":{
+                                                "properties": {
+                                                    "id": {
+                                                        "type": "number"
+                                                    },
+                                                    "name": {
+                                                        "type": "string"
+                                                    }
+                                                }
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "post":{
+                "security": [
+                    {
+                        "Auth": []
+                    }
+                ],
+                "description": "Post product by category id",
+                "parameters": [
+                    {
+                        "required": true,
+                        "name": "categoryId",
+                        "in": "path",
+                        "description": "category id"
+                    }
+                ],
+                "requestBody":{
+                    "content": {
+                        "application/json":{
+                            "schema":{
+                                "type": "object",
+                                "properties":{
+                                    "name":{
+                                        "type": "string"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200" :{
+                        "description": "success get all products by category id",
+                        "content": {
+                            "application/json":{
+                                "schema":{
+                                    "type": "object",
+                                    "properties": {
+                                        "code": {
+                                            "type": "number"
+                                        },
+                                        "status": {
+                                            "type": "string"
+                                        },
+                                        "data":{
+                                            "type": "object",
+                                            "properties": {
+                                                "id":{
+                                                    "type": "number"
+                                                },
+                                                "name":{
+                                                    "type": "string"
+                                                }
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "put":{
+                "security": [
+                    {
+                        "Auth": []
+                    }
+                ],
+                "description": "Put product by category id",
+                "parameters": [
+                    {
+                        "required": true,
+                        "name": "categoryId",
+                        "in": "path",
+                        "description": "category id"
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/CategoryResponse"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Success update product by category id",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "code": {
+                                            "type": "number"
+                                        },
+                                        "status": {
+                                            "type": "string"
+                                        },
+                                        "data": {
+                                            "$ref": "#/components/schemas/CategoryResponse"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+
+            },
+            "delete":{
+                "security": [
+                    {
+                        "Auth": []
+                    }
+                ],
+                "description": "Delete product",
+                "parameters": [
+                    {
+                        "required": true,
+                        "name": "categoryId",
+                        "in": "path",
+                        "description": "category id"
+                    }
+                ],
+                "requestBody":{
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "id": {
+                                        "type": "number"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Success dekete product",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "code": {
+                                            "type": "number"
+                                        },
+                                        "status": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                } 
             }
         }
     }
